reports/python.log
Traceback (most recent call last):
  File "/opt/miniconda3/envs/cb1020/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/opt/miniconda3/envs/cb1020/lib/python3.9/site-packages/nbclient/client.py", line 1112, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/opt/miniconda3/envs/cb1020/lib/python3.9/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/opt/miniconda3/envs/cb1020/lib/python3.9/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/opt/miniconda3/envs/cb1020/lib/python3.9/asyncio/base_events.py", line 642, in run_until_complete
    return future.result()
  File "/opt/miniconda3/envs/cb1020/lib/python3.9/site-packages/nbclient/client.py", line 553, in async_execute
    await self.async_execute_cell(
  File "/opt/miniconda3/envs/cb1020/lib/python3.9/site-packages/nbclient/client.py", line 857, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/opt/miniconda3/envs/cb1020/lib/python3.9/site-packages/nbclient/client.py", line 760, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
import time

# Fixing random state for reproducibility
np.random.seed(20210802)

N = 100

a = np.random.rand(N*N).reshape((N,N))
b = np.random.rand(N*N).reshape((N,N))

ti = time.time()

c = np.matmul(a,b)

tf = time.time()

print(f'  matmul: {(tf - ti) * 1000:10.4f} (ms)')

ti = time.time()

for i in range(N):
    for j in range(N):
        for k in range(N):
            c[i,j] = a[i,k] * b[k,j]

tf = time.time()

print(f'for loop: {(tf - ti) * 1000:10.4f} (ms)')v
------------------

[0;36m  File [0;32m"<ipython-input-6-37aea01b0d9e>"[0;36m, line [0;32m28[0m
[0;31m    print(f'for loop: {(tf - ti) * 1000:10.4f} (ms)')v[0m
[0m                                                     ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-6-37aea01b0d9e>, line 28)

